--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
@@ -291,7 +291,7 @@
 
 		&:hover,
 		&:active {
-			background-color: v.$light-gray-level-5;
+			background-color: v.$mode-hover-background-color-top-bar-options-dropdown-row-light;
 		}
 	}
 
